Refactor controllers: Simplify listener removal and improve code consistency