@@ -75,7 +75,7 @@ public class LoseCrewMenuController implements MenuController.ContextDataReceive
             shipPaneTyped.prefWidthProperty().bind(shipPane.widthProperty());
             shipPaneTyped.prefHeightProperty().bind(shipPane.heightProperty());
 
-            shipController = (ShipController) loader.getController();
+            shipController = loader.getController();
         } catch (IOException e) {
             showError("Error uploading ship: " + e.getMessage());
         }
@@ -173,8 +173,8 @@ public class LoseCrewMenuController implements MenuController.ContextDataReceive
 
         if (shipPane != null) {
             shipPane.getChildren().clear();
-            if (shipPane.getChildren().size() > 0) {
-                Parent shipView = (Parent) shipPane.getChildren().get(0);
+            if (!shipPane.getChildren().isEmpty()) {
+                Parent shipView = (Parent) shipPane.getChildren().getFirst();
                 if (shipView != null) {
                     try {
                         Pane shipPaneTyped = (Pane) shipView;
@@ -196,9 +196,7 @@ public class LoseCrewMenuController implements MenuController.ContextDataReceive
             errorLabel.setVisible(false);
         }
 
-        if (cabins != null) {
-            cabins.clear();
-        }
+        cabins.clear();
 
         username = null;
         ship = null;
